--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@react-pdf/renderer": "^4.3.1",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "next-auth": "^4.24.13",
